HBase - rezing